@startuml

!include ../classes.puml

package game.interaction.replicadialog {

    abstract class DialogNode {
        - Object interviewer
        - Set<DialogNode> children

        + String say()
        + String getDescription()
        + boolean isTo(Object interviewer)
        + DialogNode pasteChildren(Set<DialogNode> pastedChildren)
    }
    DialogNode "1" o--> "*" DialogNode

    class DialogController {
        - Human interviewer
        - Map<String, DialogNode> availableChoices

        + List<String> act(String action)
        + Set<String> getChoices()
        + String getDescription()
    }
    ActionController <|-- DialogController
    DialogController "1" o--> "*" DialogNode
}

@enduml